// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceListPanel components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <AnimatedComponent
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": "100%",
        },
        Object {
          "height": 88,
          "top": -88,
        },
      ]
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 60,
          "justifyContent": "center",
          "marginLeft": 20,
          "width": 60,
        }
      }
    >
      <Component
        name="arrow"
        size={16}
        style={
          Object {
            "transform": Array [
              Object {
                "rotate": "90deg",
              },
            ],
          }
        }
      />
    </TouchableOpacity>
  </AnimatedComponent>
  <AnimatedComponent
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "#FAFAFA",
          "bottom": 0,
          "position": "absolute",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 20,
          "top": 667,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "height": 112,
            "justifyContent": "space-between",
            "marginBottom": 20,
            "width": "100%",
          },
          Object {
            "paddingHorizontal": 48,
          },
        ]
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignSelf": "center",
              "height": 8,
              "marginTop": 10,
              "width": 54,
            },
            Object {
              "backgroundColor": "rgb(235,235,235)",
            },
          ]
        }
      />
      <_class2
        activeKey="0"
        defaultActiveKey={0}
        isUnderlineCenter={true}
        onChange={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "rgb(235,235,235)",
            },
            undefined,
          ]
        }
        tabActiveStyle={Object {}}
        tabActiveTextStyle={Object {}}
        tabStyle={Object {}}
        tabTextStyle={Object {}}
        tabs={
          Array [
            Object {
              "activeTextStyle": Object {
                "color": "#00B996",
              },
              "key": "0",
              "textStyle": Object {
                "color": "#000",
              },
              "title": "Bluetooth device list",
            },
            Object {
              "activeTextStyle": Object {
                "color": "#00B996",
              },
              "key": "1",
              "textStyle": Object {
                "color": "#000",
              },
              "title": "Zigbee device list",
            },
          ]
        }
        type="radio"
        underlineStyle={Object {}}
        wrapperStyle={Object {}}
      />
    </View>
    <FlatList
      columnWrapperStyle={
        Object {
          "justifyContent": "space-between",
        }
      }
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingHorizontal": 48,
        }
      }
      data={Array []}
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={20}
      key="1"
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={2}
      onEndReachedThreshold={2}
      onScroll={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEnabled={false}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      style={
        Object {
          "flex": 1,
        }
      }
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </AnimatedComponent>
</View>
`;

exports[`DeviceListPanel components change postion 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <AnimatedComponent
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": "100%",
        },
        Object {
          "height": 88,
          "top": -88,
        },
      ]
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 60,
          "justifyContent": "center",
          "marginLeft": 20,
          "width": 60,
        }
      }
    >
      <Component
        name="arrow"
        size={16}
        style={
          Object {
            "transform": Array [
              Object {
                "rotate": "90deg",
              },
            ],
          }
        }
      />
    </TouchableOpacity>
  </AnimatedComponent>
  <AnimatedComponent
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "#FAFAFA",
          "bottom": 0,
          "position": "absolute",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 20,
          "top": 333.5,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "height": 112,
            "justifyContent": "space-between",
            "marginBottom": 20,
            "width": "100%",
          },
          Object {
            "paddingHorizontal": 48,
          },
        ]
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignSelf": "center",
              "height": 8,
              "marginTop": 10,
              "width": 54,
            },
            Object {
              "backgroundColor": "rgb(235,235,235)",
            },
          ]
        }
      />
      <_class2
        activeKey="0"
        defaultActiveKey={0}
        isUnderlineCenter={true}
        onChange={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "rgb(235,235,235)",
            },
            undefined,
          ]
        }
        tabActiveStyle={Object {}}
        tabActiveTextStyle={Object {}}
        tabStyle={Object {}}
        tabTextStyle={Object {}}
        tabs={
          Array [
            Object {
              "activeTextStyle": Object {
                "color": "#00B996",
              },
              "key": "0",
              "textStyle": Object {
                "color": "#000",
              },
              "title": "Bluetooth device list",
            },
            Object {
              "activeTextStyle": Object {
                "color": "#00B996",
              },
              "key": "1",
              "textStyle": Object {
                "color": "#000",
              },
              "title": "Zigbee device list",
            },
          ]
        }
        type="radio"
        underlineStyle={Object {}}
        wrapperStyle={Object {}}
      />
    </View>
    <FlatList
      columnWrapperStyle={
        Object {
          "justifyContent": "space-between",
        }
      }
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingHorizontal": 48,
        }
      }
      data={Array []}
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={20}
      key="1"
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={2}
      onEndReachedThreshold={2}
      onScroll={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEnabled={false}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      style={
        Object {
          "flex": 1,
        }
      }
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </AnimatedComponent>
</View>
`;
